[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robot_framework"
version = "0.0.1"
authors = [
  { name="MTM Digitalisering", email="avoidspam@thankyou.dk" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "OpenOrchestrator == 1.*",
    "Pillow == 10.*",
    "Office365-REST-Python-Client == 2.5.13",
    "pywin32 == 308",
    "Pebble == 5.1.0"
]

[project.optional-dependencies]
dev = [
  "pylint",
  "flake8"
]